# lerpz-com

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Cargo.toml  README.md  biome.json  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  rustfmt.toml  tsconfig.json  turbo.json
.sqlx/: query-03c9b0c602306519283e19cd438915d70e76b45da130a3c23cb6ddac698aadb7.json  query-06c43a75bd2fb798cbe72f291a9a1c9405a6f0a3b8c0333a3f211aaec9a18091.json  query-0f584f1492d90ded10428f5ccf8d2b662e7c75737079b48fc8490ea908c699f1.json  query-13e0daa1aeff604b9ac090f04856b3bf2661f044ec119cf9fe632e4eee8cbaab.json  query-1959904bf4bb24d1d06b098d1b41e796409a86d20f758c9f97668cc5377c6049.json  query-201112679a0845036f0c76e3f6e06c8d36ac7cef7fa4f5c1f944a54e423a0881.json  query-209ab88b75efd28c9be3f9c3e73c10ba500e1de53eccda089476aa9317e6061f.json  query-230fb1fd5eabacfaef796b509adf67253c91fb4d43dab0bd47abf262d959c44c.json  query-273e8760de42a2aae4f33994c031c948acb3956b8be1fb809d460ee99c429c46.json  query-276c1f045bf95dd548fa51d3c047f8d1a6c6c19e7624f5eb9580af9e33b10f51.json  query-32355d6772e930cdcc7cad85125db5a5b295a824012a39b6c863b749ef5e5a12.json  query-37994537a147dcc8d3a9a2de2e67ddcb5925623a9d67af7c25e3f5235206dcdd.json  query-4912f562ec5e257cc8b00a840d4906f8a1e652bfceee521d400cb91a3bbd0016.json  query-4eca956273dd9ca4ecd7aac6816556dd733f106433fcd2572c163481398e9801.json  query-4f5b3bb9cbb52cbd2db6d89ba1d60050c095038e5fa6d6502e7c0a054e3278e1.json  query-53920434cb12686c43298719d6179dcdd4a05d31272feeb9a15a96c49137a1f4.json  query-589304de6fea939eb439f2b89a4a5657262f46c8d8e56db3e1d8ccba53fabbf7.json  query-5b2b17604087586ae54fdceb38b9c3f2b727aa9776c7229c3378d4ff1ea2921b.json  query-611c0efb2d2ca4f5d771142b5a2a9461d80a2e61516b796fd8b1db1d2f7561ce.json  query-6d116ffcaabf17e211edbda7a40e0c2390b0792966a0b95a934ce0b12bec6926.json  query-79a07e94d4e417e9bce2bc584524e0c81aa14486a0009accc72155dcc298551d.json  query-7d53f779de8efdb47bbd113ced248fc8aa979737f2eee8fea35c8c08e7d69b16.json  query-7f41f36536b7b43334c73a72e43c6c98ea807440c603da8188ddb4fa52caf562.json  query-8009fb6a49ac142f7dfe91918b8abb9b0a6ecead214fab18e1cd424b2982c339.json  query-8276cddf4756e63e3c4d3f82266d9d1d784bfd21b1cda03151b44a2da21fdf3a.json  query-8f10a1a30f510788249c4add44fd81fff9d091ff9faf7d190beff72589df0cbb.json  query-91f434632d995286e005b660417ccfd085974e3b227168d24df01b95fbe8fde7.json  query-94a5aad4f4c18a28bc618871d35b0ddda84e3e2e6e0061bf538604512eba74b0.json  query-9e63c17914326e6cce3ec1c0b2b4ea191c58d998704543ff06f29e72d11825de.json  query-ae097d255057bd163c0e090ffd9d064cc39baceaae8d43d913f5969d3eedbb6a.json  query-b88a5cfa6eeca79f077521df41693a2db0ea819e3675448a85557c47fc4dd623.json  query-ba03028d723e07aeae5f5d88ec675878e0a600546d0024d05b5350fac9809ad0.json  query-bf6bb8e5ba243c36e08bd24217f43eb01f39d62fe1234ecd08e374dc49aa1a26.json  query-c1ce5f99d892040f5dcb6f226c46968ff39825b7adef9c92aba68740816f7fc9.json  (+13 more)
benchmarks/: Cargo.toml
benchmarks/benches/: hash_pwd.rs  pwd.rs  upn.rs  validate_pwd.rs
certs/: README.md
crates/lerpz-agent/: Cargo.toml
crates/lerpz-agent/src/: client.rs  error.rs  factory.rs  lib.rs
crates/lerpz-ai/: Cargo.toml
crates/lerpz-ai/src/: lib.rs
crates/lerpz-ai/src/generation/: chat.rs  image.rs  mod.rs  video.rs
crates/lerpz-ai/src/portkey/: client.rs  config.rs  error.rs
crates/lerpz-axum/: Cargo.toml
crates/lerpz-axum/src/: error.rs  lib.rs  oapi.rs  problem.rs  shutdown.rs
crates/lerpz-axum/src/middleware/: instance.rs  mod.rs  validate.rs
crates/lerpz-axum/src/middleware/azure/: config.rs  error.rs  mod.rs  validation.rs
crates/lerpz-metadata/: Cargo.toml
crates/lerpz-metadata/src/: client.rs  error.rs  lib.rs  models.rs  mongo.rs  postgres.rs  utils.rs
crates/lerpz-metadata/src/postgres/: mod.rs  rows.rs
crates/lerpz-portkey/: Cargo.toml
crates/lerpz-portkey/src/: client.rs  config.rs  error.rs  lib.rs
crates/lerpz-pwd/: Cargo.toml
crates/lerpz-pwd/src/: lib.rs  parts.rs
crates/lerpz-pwd/src/scheme/: error.rs  scheme_01.rs
svc/ai-agent/: .env.example  Cargo.toml  Dockerfile  scalar.html
svc/ai-agent/src/: agent.rs  client.rs  config.rs  error.rs  factory.rs  main.rs  oai.rs  oapi.rs  portkey.rs  state.rs  stream.rs  tools.rs
svc/ai-agent/src/api/: chat.rs  mod.rs
svc/ai-agent/src/prompts/: preamble.txt
svc/ai-agent/src/tools/: error.rs  knowledge.rs  knowledge_base.rs  mod.rs  profile.rs
svc/kamino/: .env.example  Cargo.toml  Dockerfile
svc/kamino/src/: config.rs  main.rs  oapi.rs  portkey.rs  state.rs
svc/kamino/src/api/: health.rs  mod.rs
svc/kamino/src/api/agents/: create.rs  delete.rs  mod.rs  update.rs
svc/kamino/src/api/chats/: create.rs  delete.rs  edit.rs  list.rs  message.rs  message_delete.rs  mod.rs  read.rs  stream.rs  update.rs
svc/kamino/src/api/enhance/: chat.rs  image.rs  mod.rs  video.rs
svc/kamino/src/api/images/: analysis.rs  analyze_upload.rs  create.rs  delete.rs  list.rs  mod.rs
svc/kamino/src/api/models/: create.rs  delete.rs  list.rs  mod.rs  read.rs  update.rs
svc/kamino/src/api/sessions/: delete.rs  mod.rs  start.rs  stop.rs
svc/kamino/src/api/settings/: mod.rs  read.rs  update.rs
svc/kamino/src/api/videos/: analysis.rs  create.rs  job_store.rs  list.rs  mod.rs  status.rs
svc/portal-api/: .dockerignore  .env.example  Cargo.toml  Dockerfile  scalar.html
svc/portal-api/src/: config.rs  main.rs  oapi.rs  state.rs
svc/portal-api/src/api/: chat.rs  failure.rs  health.rs  mod.rs
svc/portal-api/src/api/chat/: create.rs  mod.rs
svc/portal-api/src/api/chats/: create.rs  list.rs  message.rs  mod.rs  read.rs
svc/portal-api/src/api/groups/: create.rs  delete.rs  list.rs  mod.rs  read.rs  update.rs
svc/portal-api/src/api/images/: create.rs  delete.rs  edit.rs  mod.rs
svc/portal-api/src/api/models/: create.rs  delete.rs  list.rs  read.rs  update.rs
svc/portal-api/src/api/org/: mod.rs
svc/portal-api/src/api/orgs/: create.rs  delete.rs  list.rs  mod.rs  read.rs  update.rs
svc/portal-api/src/api/usage/: mod.rs
svc/portal-api/src/utils/: mod.rs  tokens.rs
(+495 files in other folders)
