[workspace]
resolver = "3"
members = ["crates/*", "benchmarks", "svc/portal-api"]

[workspace.package]
version = "0.1.0"
edition = "2024"
homepage = "https://lerpz.com"
documentation = "https://docs.lerpz.com"
authors = ["Kasper Jønsson <kas@lerpz.com>"]

[workspace.dependencies]
# Internal
lerpz-axum = { path = "crates/lerpz-axum" }
lerpz-jwt = { path = "crates/lerpz-jwt" }
lerpz-model = { path = "crates/lerpz-model" }
lerpz-pwd = { path = "crates/lerpz-pwd" }
lerpz-utils = { path = "crates/lerpz-utils" }
# Database
bb8 = "0.9"
bb8-redis = "0.24"
redis = "0.32"
sqlx = "0.8"
# Axum, Tokio and Tower
axum = "0.8"
axum-extra = "0.10"
http = "1.3"
tokio = "1.47"
tokio-util = "0.7"
tower = "0.5"
tower-http = "0.6"
utoipa = "5.4"
utoipa-axum = "0.2"
utoipa-swagger-ui = "9.0"
# Tracing
tracing = "0.1"
tracing-subscriber = "0.3"
# Macro
quote = "1.0"
syn = "2.0"
# Serde
serde = "1.0"
serde_json = "1.0"
# AI
async-openai = "0.30"
rmcp = "0.6"
# Utilities
anyhow = "1.0"
argon2 = "0.5"
base64 = "0.22"
cfg-if = "1.0"
chrono = "0.4"
cookie = "0.18"
criterion = "0.7"
dotenvy = "0.15"
hex = "0.4"
jsonwebtoken = "9.3"
mime_guess = "2.0"
rand = "0.9"
regex = "1.11"
reqwest = "0.12"
schemars = "1.0"
secrecy = "0.10"
strum = "0.27"
thiserror = "2.0"
url = "2.5"
uuid = "1.18"
validator = "0.20"
