[workspace]
resolver = "3"
members = ["crates/*", "benchmarks", "svc/artoo", "svc/kamino"]

[workspace.package]
version = "0.1.0"
edition = "2024"
homepage = "https://lerpz.com"
documentation = "https://docs.lerpz.com"
authors = ["Kasper Jønsson <kas@lerpz.com>"]

[workspace.dependencies]
# Internal
lerpz-axum = { path = "crates/lerpz-axum" }
lerpz-jwt = { path = "crates/lerpz-jwt" }
lerpz-macros = { path = "crates/lerpz-macros" }
lerpz-metadata = { path = "crates/lerpz-metadata" }
lerpz-model = { path = "crates/lerpz-model" }
lerpz-pwd = { path = "crates/lerpz-pwd" }
lerpz-utils = { path = "crates/lerpz-utils" }
# Services
aws-sdk-s3 = "1.132"
bb8 = "0.9"
bb8-redis = "0.24"
mongodb = "2.8"
qdrant-client = "1.17"
redis = "0.32"
sqlx = "0.8"
# Axum, Tokio and Tower
async-stream = "0.3"
axum = "0.8"
axum-extra = "0.10"
http = "1.3"
scalar_api_reference = "0.1"
tokio = "1.47"
tokio-util = "0.7"
tokio-stream = "0.1"
tower = "0.5"
tower-http = "0.6"
utoipa = "5.4"
utoipa-axum = "0.2"
utoipa-scalar = "0.3"
# Tracing
tracing = "0.1"
tracing-subscriber = "0.3"
# Macro
quote = "1.0"
syn = "2.0"
proc-macro2 = "1.0"
# Serde
serde = "1.0"
serde_json = "1.0"
# AI
async-openai = "0.32"
rig-core = "0.37"
rig-qdrant = "0.2"
rmcp = "0.6"
# Utilities
anyhow = "1.0"
argon2 = "0.5"
base64 = "0.22"
cfg-if = "1.0"
chrono = "0.4"
cookie = "0.18"
criterion = "0.7"
dotenvy = "0.15"
hex = "0.4"
image = "=0.25.5"
jsonwebtoken = "9.3"
mime_guess = "2.0"
rand = "0.9"
regex = "1.12"
reqwest = "0.12"
schemars = "1.2"
secrecy = "0.10"
strum = "0.28"
thiserror = "2.0"
url = "2.5"
uuid = "1.18"
validator = "0.20"

[workspace.lints.clippy]
unwrap_used = "deny"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
