[package]
name = "lerpz-ai"
edition = "2024"
version.workspace = true

[features]
# Provides the `portkey` module with helpers for the Portkey AI gateway.
portkey = ["dep:serde_json"]
# Provides `portkey::PortkeyConfig`, an `async-openai` `Config` for the Portkey gateway.
async-openai = ["portkey", "dep:async-openai", "dep:http", "dep:secrecy"]
# Provides `portkey::build_client`, a `rig-core` client pointed at the Portkey gateway.
rig = ["portkey", "dep:rig-core", "dep:http", "dep:secrecy", "dep:anyhow"]
# Provides the `generation` module: family-aware image, video and chat generation.
generation = [
    "async-openai",
    "async-openai/byot",
    "async-openai/chat-completion",
    "async-openai/image",
    "dep:reqwest",
    "reqwest/json",
    "dep:tokio",
    "tokio/time",
    "dep:tokio-stream",
    "dep:async-stream",
    "dep:base64",
    "dep:serde",
    "serde/derive",
    "dep:tracing",
]

[dependencies]
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
async-openai = { workspace = true, optional = true }
rig-core = { workspace = true, optional = true }
http = { workspace = true, optional = true }
secrecy = { workspace = true, optional = true }
anyhow = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
tokio-stream = { workspace = true, optional = true }
async-stream = { workspace = true, optional = true }
base64 = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }

[lints]
workspace = true
