[package]
name = "lerpz-axum"
edition = "2024"
version.workspace = true

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
jsonwebtoken = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true, features = ["json"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt", "signal"] }
tower = { workspace = true }
tracing = { workspace = true }
regex = { workspace = true, optional = true }
serde = { workspace = true }
utoipa = { workspace = true, features = ["macros"], optional = true }
serde_json = { workspace = true, optional = true }
uuid = { workspace = true, features = ["v4"] }
validator = { workspace = true, features = ["derive"] }

[features]
azure = ["dep:jsonwebtoken", "dep:reqwest", "dep:regex"]
oapi  = ["dep:utoipa", "dep:serde_json"]

[lints]
workspace = true
