[package]
name = "lerpz-metadata"
edition = "2024"
version.workspace = true

[dependencies]
aws-sdk-s3 = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
sqlx = { workspace = true, features = [
    "chrono",
    "macros",
    "postgres",
    "runtime-tokio-native-tls",
    "uuid",
] }
thiserror = { workspace = true }
uuid = { workspace = true, features = ["serde"] }

[lints]
workspace = true
