[package]
name = "lerpz-portkey"
edition = "2024"
version.workspace = true

[features]
# Provides `PortkeyConfig`, an `async-openai` `Config` for the Portkey gateway.
async-openai = ["dep:async-openai", "dep:http", "dep:secrecy"]
# Provides `build_client`, a `rig-core` client pointed at the Portkey gateway.
rig = ["dep:rig-core", "dep:http", "dep:secrecy", "dep:anyhow"]

[dependencies]
serde_json = { workspace = true }
async-openai = { workspace = true, optional = true }
rig-core = { workspace = true, optional = true }
http = { workspace = true, optional = true }
secrecy = { workspace = true, optional = true }
anyhow = { workspace = true, optional = true }

[lints]
workspace = true
