[package]
name = "lerpz-pwd"
edition = "2024"
version.workspace = true

[dependencies]
argon2 = { workspace = true, features = ["std"] }
hex = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
dotenvy = { workspace = true }

[lints]
workspace = true
