[package]
name = "ai-agent"
version.workspace = true
edition.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true

[dependencies]
# Internal
lerpz-axum = { workspace = true, features = ["azure", "oapi"] }
lerpz-utils = { workspace = true }
# AI & async
rig-core = { workspace = true }
rig-qdrant = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
# Database
qdrant-client = { workspace = true }
# Axum, Tokio and Tower
axum = { workspace = true, features = ["macros", "tokio", "json", "tracing"] }
tower-http = { workspace = true, features = ["cors", "trace"] }
utoipa = { workspace = true, features = ["macros"] }
utoipa-axum = { workspace = true }
utoipa-scalar = { workspace = true, features = ["axum"] }
# Serde
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
schemars = { workspace = true }
# Other
anyhow = { workspace = true }
dotenvy = { workspace = true }
http = { workspace = true }
secrecy = { workspace = true }
strum = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }

[lints]
workspace = true
