[package]
name = "kamino"
version.workspace = true
edition.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true

[dependencies]
# Internal
lerpz-axum = { workspace = true, features = ["azure", "oapi"] }
lerpz-metadata = { workspace = true }
lerpz-portkey = { workspace = true }
lerpz-utils = { workspace = true }
# Services
aws-sdk-s3 = { workspace = true }
bb8 = { workspace = true }
bb8-redis = { workspace = true }
redis = { workspace = true }
sqlx = { workspace = true, features = [
    "chrono",
    "json",
    "macros",
    "migrate",
    "postgres",
    "runtime-tokio-native-tls",
    "uuid",
] }
# Axum, Tokio and Tower
axum = { workspace = true, features = [
    "macros",
    "tokio",
    "json",
    "tracing",
] }
tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true }
tower-http = { workspace = true, features = ["cors", "trace"] }
async-stream = { workspace = true }
utoipa = { workspace = true, features = ["macros", "chrono", "uuid"] }
utoipa-axum  = { workspace = true }
scalar_api_reference = { workspace = true, features = ["axum"] }
serde_json = { workspace = true }
# Tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
# Serde
serde = { workspace = true }
# Utilities
async-openai = { workspace = true, features = ["byot", "chat-completion", "image", "audio", "video"] }
base64 = { workspace = true }
image = { workspace = true, features = ["jpeg", "png"] }
chrono = { workspace = true }
cookie = { workspace = true }
dotenvy = { workspace = true }
secrecy = { workspace = true }
strum = { workspace = true, features = ["derive"] }
schemars = { workspace = true }
uuid = { workspace = true, features = ["v7"] }
validator = { workspace = true }

[dev-dependencies]

[lints]
workspace = true
