[package]
name = "portal-api"
version.workspace = true
edition.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true

[dependencies]
# Internal
lerpz-axum = { workspace = true, features = ["azure"] }
lerpz-model = { workspace = true }
lerpz-utils = { workspace = true }
# Database
bb8 = { workspace = true }
bb8-redis = { workspace = true }
redis = { workspace = true }
sqlx = { workspace = true, features = [
    "chrono",
    "macros",
    "postgres",
    "runtime-tokio-native-tls",
    "uuid",
] }
# Axum, Tokio and Tower
axum = { workspace = true, features = [
    "macros",
    "tokio",
    "json",
    "tracing",
] }
tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true }
tower-http = { workspace = true, features = ["cors"] }
utoipa = { workspace = true, features = ["macros"] }
utoipa-axum  = { workspace = true }
utoipa-swagger-ui = { workspace = true, features = ["axum"] }
# Tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
# Serde
serde = { workspace = true }
serde_json = { workspace = true }
# Utilities
anyhow = { workspace = true }
async-openai = { workspace = true, features = ["chat-completion", "image", "audio", "video"] }
base64 = { workspace = true }
chrono = { workspace = true }
cookie = { workspace = true }
dotenvy = { workspace = true }
secrecy = { workspace = true }
strum = { workspace = true, features = ["derive"] }
uuid = { workspace = true }
validator = { workspace = true }

[dev-dependencies]
